# compilium

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  a.out.ld_5UTruH  analyzer.c  ast.c  ast_test  ast_test.c  compilium.c  compilium.h  context.c  error.c  generate.c  generator.c  il.c  misc.c  parser.c  preprocessor.c  reg.c  static.c  std.c  std.h  struct.c  symbol.c  test.c  test.sh  test_preprocess.sh  testinput.c  token.c  token_test  token_test.c  tokenizer.c  type.c  type.self.c  type_ok.c  type_test  type_test.c  (+1 more)
.circleci/: config.yml
.github/: FUNDING.yml
Tests/: .gitignore  Makefile  block_scope.c  break_continue.c  char_array_assign.c  char_pointer_deref.c  comments.c  enum.c  for_with_decl.c  func_returning_void.c  global_variable.c  hello_world.c  include.c  initializer.c  int_array.c  local_variable_def_assign_ref.c  nested_assign.c  nested_call.c  pointer_condition.c  preprocess.c  prime.c  printf.c  printf_with_func_call.c  printf_with_var.c  recursive.c  recursive_fibonacci.c  return_argc.c  sample.c  short_circuit.c  simple_func_with_param.c  simple_return.c  simple_return_with_bin_op_minus.c  simple_return_with_bin_op_mixed_priority.c  simple_return_with_bin_op_mul.c  simple_return_with_bin_op_plus.c  simple_return_with_comma_op.c  std.h  string_literal.c  struct.c  struct_decl_in_func.c  (+11 more)
examples/: .gitignore  Makefile  README.md  calc.c  collatz.c  constsum.c  ctests.c  fib.c  fib_measure.sh  gameoflife.c  gen_constsum.js  hello.c  jsondump.c  jsondump_test.sh  measure_collatz.sh  measure_constsum.sh  measure_pi.sh  pi.c  (+2 more)
(+14 files in other folders)
